# valaLinq

./: .gitignore  README.md  meson.build
src/Collections/: Dictionary.vala  ICollection.vala  IDictionary.vala  IEnumerable.vala  IList.vala  IQueryable.vala  IQueryableProvider.vala  List.vala  ListQueryableProvider.vala  Queue.vala  Stack.vala  Tuple.vala
src/Expressions/: ExpressionTree.vala
tests/: main.vala
tests/Collections/: DictionaryTests.vala  ListQueryableProviderTests.vala  ListTests.vala  QueryableTests.vala  QueueTests.vala  StackTests.vala  TupleTests.vala
